# security-android

./: MANUAL_BUILD_GUIDE.md  README.md  SAFE_DEPLOYMENT_GUIDE.md  build.gradle.kts  build_fortress.ps1  build_simple.ps1  build_stable.bat  build_stable.ps1  check_env.bat  check_env.ps1  check_environment.bat  gradle.properties  gradlew.bat  install_java.bat  local.properties  safe_build.bat  settings.gradle.kts  verify_env.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/fortress/hypervisor/: HypervisorIntegrationTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/java/com/fortress/hypervisor/: HypervisorAccessibilityService.kt  HypervisorApplication.kt  HypervisorDeviceAdmin.kt  HypervisorNotificationListener.kt  HypervisorVpnService.kt  MainActivity.kt
app/src/main/java/com/fortress/hypervisor/modules/: DeviceSecurityAnalyzer.kt  ForensicLogger.kt  ThreatAnalyzer.kt
app/src/main/java/com/fortress/hypervisor/utils/: ErrorHandler.kt
app/src/main/jni/: native_stub.cpp
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  device_admin_policies.xml
app/src/main/rust/: Cargo.toml  lib.rs  memory_analysis.rs  scanner.rs
app/src/main/rust/src/: lib.rs  packet_inspection.rs
app/src/test/java/com/fortress/hypervisor/core/: DataLeakPreventionEngineTest.kt  HypervisorApplicationTest.kt
gradle/wrapper/: gradle-wrapper.properties
