[package]
name = "fortress_hypervisor_rust"
version = "1.0.0"
edition = "2021"

[lib]
name = "fortress_hypervisor"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
regex = "1.7"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
sha2 = "0.10"
rayon = "1.8"
memmap2 = "0.9"

[dependencies.jni]
version = "0.21"
default-features = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
